--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="healthbot.html">chatbot</a>
+                        </li> 
                     </ul>
                     <form action="#error" method="GET" class="d-flex search-header">
                         <input class="form-control" type="search" placeholder="Enter Keyword..." aria-label="Search"
@@ -543,6 +546,7 @@
             </div>
         </div>
     </section>
+
     <!-- //testimonials -->
 
     <!-- footer -->
@@ -616,6 +620,7 @@
                 </div>
                 <div class="below-section text-center pt-lg-4 mt-5">
                    <p>© 2022 All rights reserved by shaik mohammed arshad.developed for FRT Project</a></p>
+            <iframe src='https://webchat.botframework.com/embed/healthbot-svprqjs?s=zCg9KZyk5EE.IDwLWeXhB5TtmOmZiLAcD7-6fKWktISpBawCJMz0dnc' style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
                 </div>
             </div>
         </div>
